--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -87,12 +87,12 @@
         {% include 'snippet-banner--promo' %}
 
         <div class="container">
+          <div class="logo_and_nav">
 
+            {% include 'header-logo' %}
+            {% include 'header-navigation' %}
 
-          {% include 'header-logo' %}
-
-          {% include 'header-navigation' %}
-
+          </div>
         </div>
       </div>
 
