adding link to shop all

--- a/snippets/snippet-homepage--products.liquid
+++ b/snippets/snippet-homepage--products.liquid
@@ -9,5 +9,5 @@
     </div>
   </div>
 
-  <a href="#" class="btn-primary" title="Shop all Little Lotus products">Shop All</a>
+  <a href="/collections/baby-swaddles-and-sleep-sacks" class="btn-primary" title="Shop all Little Lotus products">Shop All</a>
 </div>
