--- a/assets/styles-v2.css.liquid
+++ b/assets/styles-v2.css.liquid
@@ -113,11 +113,13 @@ picture,img { max-width: 100%; }
 
 /**/
 
-.logo_and_nav {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  align-content: center;
+@media only screen and (min-width: 768px) {
+  .logo_and_nav {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+  }
 }
 
 .header ul.social_icons {
