--- a/snippets/snippet-homepage--shop_now.liquid
+++ b/snippets/snippet-homepage--shop_now.liquid
@@ -1,5 +1,5 @@
 <div class="omega eight columns section-homepage--module section-homepage--shop_now">
-  <a href="/pages/about-us" class="content-box">
+  <a href="/collections/baby-swaddles-and-sleep-sacks" class="content-box">
     <h1 class="section-title--hed">The gift of <span>Sleep</span></h1>
     <p class="section-title--dek">Shop Now</p>
   </a>
