--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -30,19 +30,19 @@
     <ul class="slides">
       {% if settings.video_position == '1' %}{{ video_slide }}{% endif %}
       {% if settings.slideshow_1_enabled %}
-	    	<li>
+	    	<li class="slide slide1">
 	    		<a href="{{ settings.image_1_link }}"><img src="{{ 'slideshow_1.jpg' | asset_url }}" alt="{{ settings.image_1_alt_text | escape }}" /></a>
 	    		{% if settings.image_1_headline != blank or settings.image_1_subtitle != blank or settings.image_1_button_text != blank %}
 	    		  <div class="flex-caption">
               <div class="container">
                 <div class="columns {% if settings.image_1_text_align == 'left' %} align_left sixteen {% elsif settings.image_1_text_align == 'right' %} align_left seven offset-by-nine {% else %} sixteen {% endif %}">
                   <h1 class="headline" style="color:{{settings.image_1_text_color}}">{{ settings.image_1_headline }}</h1>
-                  <p class="subtitle" style="color:{{settings.image_1_text_color}}">{{ settings.image_1_subtitle }}</p>
                   {% if settings.image_1_button_text != blank %}
                     <a href="{{ settings.image_1_link }}" class="action_button" style="color:{{settings.image_1_text_color}}">
                       {{ settings.image_1_button_text }}
                     </a>
                   {% endif %}
+                  <p class="subtitle" style="color:{{settings.image_1_text_color}}">{{ settings.image_1_subtitle }}</p>
                 </div>
               </div>
             </div>
@@ -51,7 +51,7 @@
 	    {% endif %}
       {% if settings.video_position == '2' %}{{ video_slide }}{% endif %}
       {% if settings.slideshow_2_enabled %}
-      	<li>
+      	<li class="slide slide2">
       		<a href="{{ settings.image_2_link }}"><img src="{{ 'slideshow_2.jpg' | asset_url }}" alt="{{ settings.image_2_alt_text | escape }}" /></a>
           {% if settings.image_2_headline != blank or settings.image_2_subtitle != blank or settings.image_2_button_text != blank %}
             <div class="flex-caption flex2">
@@ -72,7 +72,7 @@
       {% endif %}
       {% if settings.video_position == '3' %}{{ video_slide }}{% endif %}
       {% if settings.slideshow_3_enabled %}
-      	<li>
+      	<li class="slide slide3">
       		<a href="{{ settings.image_3_link }}"><img src="{{ 'slideshow_3.jpg' | asset_url }}" alt="{{ settings.image_3_alt_text | escape }}" /></a>
           {% if settings.image_3_headline != blank or settings.image_3_subtitle != blank or settings.image_3_button_text != blank %}
             <div class="flex-caption">
@@ -93,7 +93,7 @@
       {% endif %}
       {% if settings.video_position == '4' %}{{ video_slide }}{% endif %}
       {% if settings.slideshow_4_enabled %}
-      	<li>
+      	<li class="slide slide4">
       		<a href="{{ settings.image_4_link }}"><img src="{{ 'slideshow_4.jpg' | asset_url }}" alt="{{ settings.image_4_alt_text | escape }}" /></a>
           {% if settings.image_4_headline != blank or settings.image_4_subtitle != blank or settings.image_4_button_text != blank %}
             <div class="flex-caption">
@@ -114,7 +114,7 @@
       {% endif %}
       {% if settings.video_position == '5' %}{{ video_slide }}{% endif %}
       {% if settings.slideshow_5_enabled %}
-      	<li>
+      	<li class="slide slide5">
       		<a href="{{ settings.image_5_link }}"><img src="{{ 'slideshow_5.jpg' | asset_url }}" alt="{{ settings.image_5_alt_text | escape }}" /></a>
           {% if settings.image_5_headline != blank or settings.image_5_subtitle != blank or settings.image_5_button_text != blank %}
             <div class="flex-caption">
@@ -135,7 +135,7 @@
       {% endif %}
       {% if settings.video_position == '6' %}{{ video_slide }}{% endif %}
       {% if settings.slideshow_6_enabled %}
-      	<li>
+      	<li class="slide slide6">
       		<a href="{{ settings.image_6_link }}"><img src="{{ 'slideshow_6.jpg' | asset_url }}" alt="{{ settings.image_6_alt_text | escape }}" /></a>
           {% if settings.image_6_headline != blank or settings.image_6_subtitle != blank or settings.image_6_button_text != blank %}
             <div class="flex-caption">
