changing so things don't wrap

--- a/snippets/header-navigation.liquid
+++ b/snippets/header-navigation.liquid
@@ -1,6 +1,6 @@
 <div class="twelve columns nav mobile_hidden">
   <div class="social-nav">
-    <div class="alpha nine columns">
+    <div class="alpha eight columns">
       <ul class="menu">
         <li>
           <a href="/collections/baby-swaddles-and-sleep-sacks" title="Shop v2" class="top-link sub-menu">Shop</a>
@@ -85,7 +85,7 @@
       </ul>
       {% endcomment %}
     </div>
-    <div class="omega three columns">
+    <div class="omega four columns">
       <ul class="social_icons">
         {% if settings.social_icons_enabled %}
           {% if settings.twitter_link != '' %}
