--- a/assets/styles-v2.css.liquid
+++ b/assets/styles-v2.css.liquid
@@ -176,6 +176,65 @@ picture,img { max-width: 100%; }
   white-space: normal;
 }
 
+
+
+/* --- Slideshow --- */
+.slide {}
+/*.slide .flex-caption { text-shadow: 0 0 0 transparent; }*/
+.slide .headline {
+  text-transform: uppercase;
+}
+.slide .flex-caption .action_button {
+  color: #fff !important;
+  font-size: 18px;
+  background-color: #ff8b81 !important;
+  border-color: transparent;
+  border-radius: 0;
+  margin-bottom: 20px;
+}
+.slide .action_button:hover {
+  border-color: transparent;
+}
+.slide1 .flex-caption {
+  top: 5%;
+}
+
+.slide1 .headline {
+  margin-bottom: 20px;
+}
+.slide1 .headline strong {
+  display: block;
+  font-size: 20px;
+}
+
+.slide2 {}
+.slide2 .flex-caption {
+  text-shadow: 0 0 0 transparent;
+  top: 7%;
+}
+.slide2 .subtitle {
+  max-width: 450px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+
+.slide3 {}
+.slide3 .flex-caption {
+  top: 25%
+}
+.slide3 .action_button {
+
+}
+
+.slide4 {}
+.slide5 {}
+.slide6 {}
+
+
+
+
+
 /**
  * Homepage - Helping Hand
  */
