--- a/assets/styles-v2.css.liquid
+++ b/assets/styles-v2.css.liquid
@@ -121,7 +121,6 @@ picture,img { max-width: 100%; }
     align-content: center;
   }
 }
-
 .header ul.social_icons {
   text-align: right;
 }
@@ -152,16 +151,17 @@ picture,img { max-width: 100%; }
 }
 
 .dropdown {
+  /*display: block;*/
   background-color: #fff;
   border-color: transparent;
-  min-width: 550px;
-  padding: 25px 50px;
-  left: calc(50% - 200px);
+  min-width: 600px;
+  padding: 25px;
+  left: calc(50% - 170px);
   top: 26px;
 }
 .nav ul.menu ul {
-  width: 22%;
-  margin-left: 3%;
+  width: 23%;
+  margin-left: 2%;
 }
 .nav ul.menu ul:first-child {
   margin-left: 0;
