--- a/snippets/header-navigation.liquid
+++ b/snippets/header-navigation.liquid
@@ -8,8 +8,8 @@
             <ul>
               <li><a href="/collections/swaddle" title="Swaddles">Swaddles</a></li>
               <li><a class="sub-link" href="/products/swaddle-preemie" title="Preemies">Preemies</a></li>
-              <li><a class="sub-link" href="/products/swaddle" title="0-3 Months">0-3 Months</a></li>
-              <li><a class="sub-link" href="/products/package-of-little-lotus-swaddle-sleeping-bag-combo-1-swaddle-1-sleeping-bag-1" title="See Bundle Option">See Bundle Option</a></li>
+              <li><a class="sub-link" href="/products/swaddle" title="0-3 Months">Newborn</a></li>
+              <li><a class="sub-link" href="/products/package-of-little-lotus-swaddle-sleeping-bag-combo-1-swaddle-1-sleeping-bag-1" title="See Bundle Option">See Bundle Options</a></li>
             </ul>
             <ul>
               <li><a href="/collections/sleeping-bags" title="Sleeping Bags">Sleeping Bags</a></li>
