--- a/snippets/snippet-homepage--featured_in.liquid
+++ b/snippets/snippet-homepage--featured_in.liquid
@@ -1,6 +1,6 @@
 <div class="section-homepage--featured_in">
   <h1 class="section-title--hed section-title--background_flourish"><span>Featured In</span></h1>
-  <div class="container content">
+  <div class="container content featured-in">
     <div class="sixteen columns">
       <a href="/pages/press">{{ 'logos-white.png' | asset_url | img_tag }}</a>
     </div>
