--- a/snippets/snippet-homepage--testimonials.liquid
+++ b/snippets/snippet-homepage--testimonials.liquid
@@ -18,7 +18,7 @@
         <use xlink:href="#icon-svg--star"></use>
       </svg>
     </div>
-    <p class="section-title--dek"><strong>4.9</strong> stars out of <strong>5</strong> for 100 reviews</p>
+    <p class="section-title--dek"><strong>5</strong> stars out of <strong>5</strong> for 42 reviews</p>
     <div class="testimonials-container">
       <figure class="alpha one-third column testimonial">
         <blockquote class="testimonial-quote">
@@ -26,7 +26,7 @@
         </blockquote>
         <footer class="testimonial-meta">
             <cite class="testimonial-author">Diana</cite>
-            <cite class="testimonial-title">Mother of Dylan <span>(3 Months Old)</span></cite>
+            <cite class="testimonial-title">Mother of Esme <span>(3 Months Old)</span></cite>
         </footer>
       </figure>
       <figure class="one-third column testimonial">
