--- a/assets/styles.css.liquid
+++ b/assets/styles.css.liquid
@@ -284,8 +284,8 @@ a:hover, a:focus { color: {{ settings.link_hover_color }}; }
 */
 
 .header div.container {
-  padding-bottom: 5px;
-  padding-top: 5px;
+  padding-bottom: 0;
+  padding-top: 0;
 }
 #header {
   display: none;
