--- a/snippets/lw-thumbnail.liquid
+++ b/snippets/lw-thumbnail.liquid
@@ -10,7 +10,7 @@
       <img class="loop_img" src="{{ product.featured_image | product_img_url: 'large' }}"  alt="{{ alt_text | escape }}" />
       </div>
 
-    <div class="info" style="text-align: center;">
+    <div class="info">
       <span class="title">{{ product.title }}</span></br>
       <!-- <a class="collection-review" href="{{ product.url | within: collection }}#shopify-product-reviews"><span class="shopify-product-reviews-badge" data-id="{{ product.id }}"></span></a> -->
 	  <span class="price {% if product.compare_at_price_max > product.price %}sale{% endif %}">
