--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -99,6 +99,7 @@
           </div>
         </div>
       </div>
+    </div>
 
 
       {% unless template contains "index" and settings.slideshow_enabled %}
