--- a/snippets/snippet-homepage--helping_hand.liquid
+++ b/snippets/snippet-homepage--helping_hand.liquid
@@ -1,11 +1,13 @@
-<div class="container content section-homepage--helping_hand">
-  <div class="eight columns alpha">
-    <span class="section-image">
-      <img src="{{ 'helping-hand.jpg' | asset_url }}" alt="Helping Hand" class="section-image">
-    </span>
-  </div>
-  <div class="content-container seven omega columns offset-by-one">
-    <h1 class="section-title--hed">A Helping <span>Hand</span></h1>
-    <p class="section-title--dek">Every Little Lotus purchase helps provide Embrace incubators to babies in need, giving them a better chance at life.</p>
+<div class="section-homepage--helping_hand">
+  <div class="container content">
+    <div class="eight columns alpha">
+      <span class="section-image">
+        <img src="{{ 'helping-hand.jpg' | asset_url }}" alt="Helping Hand" class="section-image">
+      </span>
+    </div>
+    <div class="content-container seven omega columns offset-by-one">
+      <h1 class="section-title--hed">A Helping <span>Hand</span></h1>
+      <p class="section-title--dek">Every Little Lotus purchase helps provide Embrace incubators to babies in need, giving them a better chance at life.</p>
+    </div>
   </div>
 </div>
