updating slideshow images

--- a/assets/styles-v2.css.liquid
+++ b/assets/styles-v2.css.liquid
@@ -677,7 +677,9 @@ picture,img { max-width: 100%; }
   display: block;
   margin: 0 auto 80px;
   text-align: center;
-
+}
+.section-homepage--featured_in div.content {
+  padding-top: 0;
 }
 .section-homepage--featured_in .featured-image {
   display: block;
