adding prefixed flex box things

--- a/assets/styles-v2.css.liquid
+++ b/assets/styles-v2.css.liquid
@@ -135,6 +135,10 @@ picture,img { max-width: 100%; }
 
 @media only screen and (min-width: 768px) {
   .logo_and_nav {
+    display: -webkit-box;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -148,6 +152,10 @@ picture,img { max-width: 100%; }
 .header ul.social_icons a { color: #8a8c8f !important; }
 .header ul.social_icons li:last-child { padding-right: 0; }
 .social-nav {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -315,16 +323,29 @@ picture,img { max-width: 100%; }
 
 @media only screen and (max-width: 767px) {
   .section-homepage--helping_hand .container {
+    display: -webkit-box;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
     display: flex;
     flex-flow: column nowrap;
     padding-top: 75px;
   }
   .section-homepage--helping_hand .container div:first-child {
+    -webkit-box-ordinal-group: 2;
+    -moz-box-ordinal-group: 2;
+    -ms-flex-order: 2;
+    -webkit-order: 2;
     order: 2;
     margin-left: auto;
     margin-right: auto;
+    max-width: 300px;
   }
   .section-homepage--helping_hand .container div:last-child {
+    -webkit-box-ordinal-group: 1;
+    -moz-box-ordinal-group: 1;
+    -ms-flex-order: 1;
+    -webkit-order: 1;
     order: 1;
     margin: -60px auto 50px auto;
   }
@@ -473,6 +494,10 @@ picture,img { max-width: 100%; }
 
 @media only screen and (min-width: 768px) {
   .section-homepage--testimonials .testimonials-container {
+    display: -webkit-box;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
     display: flex;
     flex-flow: row nowrap;
     justify-content: space-between;
@@ -480,6 +505,10 @@ picture,img { max-width: 100%; }
     align-content: stretch;
   }
   .section-homepage--testimonials .testimonial {
+    display: -webkit-box;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
     display: flex;
     flex-flow: column nowrap;
     justify-content: space-between;
@@ -492,6 +521,10 @@ picture,img { max-width: 100%; }
   .section-homepage--testimonials .testimonials-container {
     margin-left: auto;
     margin-right: auto;
+    display: -webkit-box;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
     display: flex;
     flex-flow: row nowrap;
     justify-content: space-between;
@@ -548,6 +581,10 @@ picture,img { max-width: 100%; }
   text-align: center;
 }
 .section-homepage--products .products-row {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
   display: flex;
   flex-flow: row nowrap;
   justify-content: center;
@@ -621,6 +658,10 @@ picture,img { max-width: 100%; }
   overflow: hidden;
 }
 .section-homepage--module_two_column .section-homepage--module {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
   display: flex;
   flex-flow: row nowrap;
   align-items: center;
