--- a/assets/styles-v2.css.liquid
+++ b/assets/styles-v2.css.liquid
@@ -40,6 +40,14 @@ picture,img { max-width: 100%; }
     margin-top: 40px;
     margin-left: -50px;
     margin-right: -50px;
+    height: 50px;
+    display: -webkit-box;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: center;
   }
   .header div.container {
     padding-top: 25px;
